# advent-of-code-2024

./: .env  .gitignore  .pre-commit-config.yaml  check_with_previous_outputs.sh  generate_day.sh  pyproject.toml  run.sh  submit.sh  template.py
src/: parse.py  prep.py  print.py  timing.py
src/days/day_01/: part1.py  part2.py
src/days/day_02/: part1.py  part2.py
src/days/day_03/: part1.py  part2.py
src/days/day_04/: part1.py  part2.py
src/days/day_05/: part1.py  part2.py
src/days/day_06/: part1.py  part2.py
src/days/day_07/: part1.py  part2.py
src/days/day_08/: part1.py  part2.py
src/days/day_09/: part1.py  part2.py
src/days/day_10/: part1.py  part2.py
src/days/day_11/: part1.py  part2.py
src/days/day_12/: part1.py  part2.py
src/days/day_13/: part1.py  part2.py
src/days/day_14/: part1.py  part2.py
src/days/day_15/: part1.py  part2.py
src/days/day_16/: part1.py  part2.py
src/days/day_17/: part1.py  part2.py
src/days/day_18/: part1.py  part2.py
src/days/day_19/: part1.py  part2.py
src/days/day_21/: part1.py  part2.py
src/days/day_22/: part1.py  part2.py
src/days/day_23/: part1.py  part2.py
src/days/day_24/: part1.py  part2.py
